--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Roboto:ital,wght@0,300;0,400;0,500;1,400;1,500&family=Satisfy&display=swap');
+/* font-family: 'Indie Flower', cursive;
+font-family: 'Lora', serif;
+font-family: 'Noto Sans', sans-serif;
+font-family: 'Roboto', sans-serif; */
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base{
+    h1,h2,h3,h4,h5,h6,h7{
+        @apply font-lora py-4;
+    }
+    h1{
+        @apply text-7xl xl:text-9xl;
+    }
+    h2{
+        @apply text-6xl md:text-7xl xl:text-8xl;
+    }
+    h3{
+        @apply text-4xl md:text-5xl xl:text-6xl;
+    }
+    h4{
+        @apply text-2xl md:text-3xl xl:text-5xl
+    }
+    h5{
+        @apply text-xl md:text-2xl xl:text-4xl
+    }
+    h6{
+        @apply text-lg md:text-2xl xl:text-3xl
+    }
+    p{
+        @apply font-roboto text-lg lg:text-2xl
+    }
+    .btnRectangle{
+        @apply flex items-center font-roboto text-xl md:text-xl lg:text-2xl w-fit px-3 py-1 lg:py-2 rounded-md;
+    }
+    .btnOval{
+        @apply flex items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit px-5 py-1 rounded-3xl ;
+    }
+    form{
+        @apply flex flex-col items-center;
+    }
+    form>*{
+        @apply text-lg m-2 border-2 rounded-md px-4 py-2 md:text-xl lg:text-3xl;
+    }
+    .nav{
+        @apply h-[6vh] lg:h-[8vh] flex sticky w-screen top-0
+    }
+    .cnt{
+        @apply h-[94vh] w-screen lg:h-[92vh]
+    }
+    .navBtn{
+      @apply text-white flex items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit px-5 py-1 rounded-3xl hover:text-black hover:bg-slate-50;
+    }
+    .overlay{
+        /* @apply ; */
+    }
+    .dropdownBtn{
+        @apply flex flex-col;
+    }
 }
