--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -45,16 +45,16 @@ font-family: 'Roboto', sans-serif; */
         @apply text-lg m-2 border-2 rounded-md px-4 py-2 md:text-xl lg:text-3xl;
     }
     .nav{
-        @apply h-[6vh] lg:h-[8vh] flex sticky w-screen top-0
+        @apply h-[6vh] lg:h-[8vh] flex sticky w-screen top-0 pt-5;
     }
     .cnt{
         @apply h-[94vh] w-screen lg:h-[92vh]
     }
     .navBtn{
-      @apply text-white flex items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit px-5 py-1 rounded-3xl hover:text-black hover:bg-slate-50;
+      @apply text-white flex flex-col items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit px-2 rounded-3xl hover:text-black hover:bg-slate-50;
     }
     .overlay{
-        /* @apply ; */
+         @apply flex flex-col text-black  bg-slate-50 w-full px-4 py-2 rounded-3xl transition translate-y-2 ease-in-out delay-500; 
     }
     .dropdownBtn{
         @apply flex flex-col;
