--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -54,10 +54,10 @@ font-family: 'Roboto', sans-serif; */
         @apply h-[100vh] w-screen lg:h-[80vh]
     }
     .navBtn{
-      @apply text-white flex flex-col items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit  my-2 rounded-3xl hover:text-black hover:bg-slate-50;
+      @apply text-white px-4 py-2 flex flex-col items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit  rounded-3xl hover:text-black hover:bg-slate-50;
     }
     .overlay{
-         @apply flex flex-col text-black  bg-slate-50 w-full px-4 py-2 rounded-3xl transition translate-y-2 ease-in-out delay-500; 
+         @apply flex flex-col absolute top-full w-fit text-black  bg-slate-50 w-full px-4 py-2 rounded-3xl transition translate-y-2 ease-in-out delay-500; 
     }
     .dropdownBtn{
         @apply flex flex-col;
