--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -29,12 +29,12 @@ font-family: 'Roboto', sans-serif; */
     h6{
         @apply text-lg md:text-2xl xl:text-3xl
     }
-    p{
+    /* p{
         @apply font-roboto text-lg lg:text-2xl
     }
     span{
         @apply font-roboto text-lg lg:text-2xl
-    }
+    } */
     .btnRectangle{
         @apply flex items-center font-roboto text-xl md:text-xl lg:text-2xl w-fit px-3 py-1 lg:py-2 rounded-md;
     }
@@ -54,12 +54,15 @@ font-family: 'Roboto', sans-serif; */
         @apply h-[100vh] w-screen lg:h-[80vh]
     }
     .navBtn{
-      @apply text-white px-4 py-2 flex flex-col items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit  rounded-3xl hover:text-black hover:bg-slate-50;
+      @apply text-white  px-4 py-2 flex flex-col items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit hover:scale-125 hover:text-lime-500 hover:transition hover:ease-in-out  ;
     }
     .overlay{
-         @apply flex flex-col absolute top-full w-fit text-black  bg-slate-50 w-full px-4 py-2 rounded-3xl transition translate-y-2 ease-in-out delay-500; 
+         @apply flex flex-col absolute top-full w-fit text-white  bg-black/80  truncate px-2 py-2 rounded-xl transition translate-y-2 ease-in-out delay-200; 
     }
     .dropdownBtn{
         @apply flex flex-col;
+    }
+    .navSelect{
+        @apply  px-3 py-1 text-lg rounded-sm hover:text-lime-500 hover:transition hover:ease-in-out ;
     }
 }
