--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -48,13 +48,13 @@ font-family: 'Roboto', sans-serif; */
         @apply text-lg m-2 border-2 rounded-md px-4 py-2 md:text-xl lg:text-3xl;
     }
     .nav{
-        @apply h-[18vh] lg:h-[18vh] flex flex-col sticky w-screen top-0;
+        @apply h-[18vh] lg:h-[18vh] flex flex-col fixed w-screen top-0;
     }
     .cnt{
         @apply h-[100vh] w-screen lg:h-[80vh]
     }
     .navBtn{
-      @apply text-white  px-4 py-2 flex flex-col items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit hover:scale-125 hover:text-lime-500 hover:transition hover:ease-in-out  ;
+      @apply text-white  mx-5 px-4 py-2 flex flex-col items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit hover:scale-125 hover:text-lime-500 hover:transition hover:ease-in-out  ;
     }
     .overlay{
          @apply flex flex-col absolute top-full w-fit text-white  bg-black/80  truncate px-2 py-2 rounded-xl transition translate-y-2 ease-in-out delay-200; 
@@ -64,5 +64,8 @@ font-family: 'Roboto', sans-serif; */
     }
     .navSelect{
         @apply  px-3 py-1 text-lg rounded-sm hover:text-lime-500 hover:transition hover:ease-in-out ;
+    }
+    .home{
+        @apply before:content-none 
     }
 }
