--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -45,7 +45,7 @@ font-family: 'Roboto', sans-serif; */
         @apply flex flex-col items-center;
     }
     form>*{
-        @apply text-lg m-2 border-2 rounded-md px-4 py-2 md:text-xl lg:text-3xl;
+        @apply text-lg m-2 border-2 rounded-md px-4 py-2 md:text-xl lg:text-2xl;
     }
     .nav{
         @apply h-[15vh] lg:h-[15vh] flex fixed justify-between w-screen top-0 ;
@@ -69,7 +69,7 @@ font-family: 'Roboto', sans-serif; */
         @apply before:content-none ;
     }
     .card{
-        @apply flex items-start justify-center rounded-lg m-3 bg-cover shadow-lg shadow-black hover:scale-110 hover:transition ease-in-out duration-500;
+        @apply flex items-start justify-center rounded-lg mx-6 my-4 bg-cover shadow-2xl shadow-black hover:scale-110 hover:transition ease-in-out duration-500;
     }
     .activities-card-title{
         @apply text-3xl text-black font-lora
