--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -20,7 +20,7 @@ font-family: 'Roboto', sans-serif; */
         @apply text-5xl md:text-7xl xl:text-8xl;
     }
     h3{
-        @apply text-3xl md:text-5xl xl:text-6xl;
+        @apply text-2xl md:text-5xl xl:text-6xl;
     }
     h4{
         @apply text-2xl md:text-3xl xl:text-5xl
@@ -46,8 +46,11 @@ font-family: 'Roboto', sans-serif; */
     form{
         @apply flex flex-col items-center;
     }
-    form>*{
-        @apply text-lg m-2 border-2 rounded-md px-4 py-2 md:text-xl lg:text-2xl;
+    form>input{
+        @apply text-lg m-2 border-2 rounded-3xl px-4 py-2 md:text-xl lg:text-2xl;
+    }
+    form>textarea{
+        @apply text-lg m-2 border-2 rounded-3xl px-4 py-2 md:text-xl lg:text-2xl;
     }
     .nav{
         @apply  h-[10vh] xl:h-[15vh] lg:h-[15vh] flex fixed justify-between w-screen top-0 ;
@@ -56,7 +59,7 @@ font-family: 'Roboto', sans-serif; */
         @apply h-[100vh] w-screen lg:h-[80vh]
     }
     .navBtn{
-      @apply text-white  mx-5 px-4 py-2 flex flex-col items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit hover:scale-125 hover:text-lime-500 hover:transition hover:ease-in-out  ;
+      @apply text-projectBlue  mx-5 px-4 py-2 flex flex-col items-center flex-nowrap space-x-2 font-roboto lg:text-2xl w-fit hover:scale-125 hover:text-lime-500 hover:transition hover:ease-in-out  ;
     }
     .overlay{
          @apply flex flex-col absolute top-full w-fit text-white  bg-black/80  truncate px-2 py-2 rounded-xl transition translate-y-2 ease-in-out delay-200; 
@@ -71,9 +74,9 @@ font-family: 'Roboto', sans-serif; */
         @apply before:content-none ;
     }
     .card{
-        @apply flex items-start justify-center rounded-lg mx-6 my-4 bg-cover shadow-2xl shadow-black hover:scale-110 hover:transition ease-in-out duration-500;
+        @apply flex items-center justify-center rounded-2xl mx-6 my-4 bg-cover shadow-2xl shadow-black hover:scale-110 hover:transition ease-in-out duration-500;
     }
     .activities-card-title{
-        @apply text-3xl text-black font-lora
+        @apply text-3xl text-yellow-300 font-lora bg-black/60 rounded-3xl p-4
     }
 }
